[gd_scene load_steps=9 format=3 uid="uid://icdm7sekwgwa"]

[ext_resource type="Script" path="res://scenes/towers/blue_1_tower.gd" id="1_0ubbq"]
[ext_resource type="Texture2D" uid="uid://37wxjgq3kga8" path="res://assets/images/towers/range_circle_edge_colored_no_center.png" id="2_mca8l"]
[ext_resource type="Texture2D" uid="uid://bdmnawu3n4ms5" path="res://assets/images/towers/b1 50.png" id="3_4kop4"]
[ext_resource type="AudioStream" uid="uid://b473sb6cq7tf3" path="res://assets/audio/effects/jump.wav" id="4_rdmjy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ku21i"]
radius = 25.0

[sub_resource type="Animation" id="Animation_8aowm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Beam:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beam:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beam:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wp6ed"]
resource_name = "fire"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beam:modulate.a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 1, 0, 0), 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Beam:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.980392, 0, 0, 0), Color(0, 1, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beam:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayckp"]
_data = {
"RESET": SubResource("Animation_8aowm"),
"fire": SubResource("Animation_wp6ed")
}

[node name="Blue1Tower" type="Node2D"]
position = Vector2(510, 332)
script = ExtResource("1_0ubbq")
type = "Blue 1"
cost = 300
cost_per_level = 150
base_damage_per_shot = 500
damage_per_level = 227
shot_delay_in_ms = 500
base_range_in_pixels = 280
range_per_level = 12
targeting_strategy = 1
should_stay_on_target = false
purpose = "Slowing. Slows 4 creeps 50%."

[node name="RangeSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_mca8l")

[node name="TowerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_4kop4")

[node name="RangeArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="RangeCollider" type="CollisionShape2D" parent="RangeArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_ku21i")

[node name="Beam" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(0, 0, 100, 100)
width = 3.0
default_color = Color(0, 1, 1, 1)

[node name="FireAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ayckp")
}

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_rdmjy")
pitch_scale = 5.0

[node name="ShotTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="ShotVisibilityTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.25
one_shot = true

[node name="Shots" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="ShotVisibilityTimer" to="." method="_on_shot_visibility_timer_timeout"]
